--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{ 'LIST_MASTER_TITLE' | translate }}</ion-title>
+    <ion-title>{{ 'LIST_MASTER_TITLE' | translate }} </ion-title>
 
     <ion-buttons end>
       <button ion-button icon-only (click)="addItem()">
@@ -20,7 +20,7 @@
         <ion-avatar item-start>
           <img [src]="item.profilePic" />
         </ion-avatar>
-        <h2>{{item.name}}</h2>
+        <h2>{{item.name}} {{cAccount.name}}</h2>
         <p>{{item.about}}</p>
         <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
       </button>
